RESOLVED FIXED Bug 236080
[Web Animations] Starting a transform animation with a 1ms delay doesn't run it accelerated
https://bugs.webkit.org/show_bug.cgi?id=236080
Summary [Web Animations] Starting a transform animation with a 1ms delay doesn't run ...
Antoine Quint
Reported 2022-02-03 06:25:37 PST
Created attachment 450769 [details] Testcase The attached example runs a simple "transform" animation with a 1ms delay and we fail to run the animation accelerated. Indeed, by the time we call startAnimation() the renderer is not composited and we bail, never to retry again. We must have some incorrect logic to indicate than the element has a pending accelerated animation and should be composited.
Attachments
Testcase (353 bytes, text/html)
2022-02-03 06:25 PST, Antoine Quint
no flags
Patch (12.48 KB, patch)
2022-02-04 04:03 PST, Antoine Quint
no flags
Patch (15.90 KB, patch)
2022-02-05 08:09 PST, Antoine Quint
dino: review+
ews-feeder: commit-queue-
Patch for landing (19.83 KB, patch)
2022-02-07 02:20 PST, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-03 06:27:10 PST
Antoine Quint
Comment 2 2022-02-04 04:03:21 PST
Dean Jackson
Comment 3 2022-02-04 06:13:06 PST
Comment on attachment 450884 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450884&action=review > Source/WebCore/ChangeLog:22 > + conditon to do so since its renderer is already composited. typo: condition
Antoine Quint
Comment 4 2022-02-05 08:09:28 PST
Antoine Quint
Comment 5 2022-02-07 02:20:22 PST
Created attachment 451071 [details] Patch for landing
EWS
Comment 6 2022-02-07 05:58:47 PST
Committed r289211 (246896@main): <https://commits.webkit.org/246896@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451071 [details].
Note You need to log in before you can comment on or make changes to this bug.