Source/WebCore/animation/AnimationEffect.h
@@ -63,7 +63,6 @@ public:
     ExceptionOr<void> updateTiming(std::optional<OptionalEffectTiming>);
 
     virtual void animationDidTick() { };
-    virtual void animationDidPlay() { };
     virtual void animationDidChangeTimingProperties() { };
     virtual void animationWasCanceled() { };
     virtual void animationSuspensionStateDidChange(bool) { };
