LayoutTests/webanimations/resources/request-frames-until-true.js
@@ -1,0 +1,16 @@
+
+const requestFramesUntilTrue = async (resolveCondition, rejectCondition) => {
+    return new Promise((resolve, reject) => {
+        if (rejectCondition && rejectCondition()) {
+            reject();
+            return;
+        }
+
+        (function tryFrame () {
+            if (resolveCondition())
+                resolve();
+            else
+                requestAnimationFrame(tryFrame);
+        })();
+    });
+};
